objects/SBQQ__QuoteLine__c/fields/Product_Promotion_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Promotion_Name__c</fullName>
    <formula>Product_Promotion__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Promotion Name</label>
    <type>Text</type>
</CustomField>