objects/SBQQ__QuoteLine__c/fields/Programmatic_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Programmatic_Partner_Discount__c</fullName>
    <description>Used in CPQ Price Rule.</description>
    <formula>IF(
OR(
ISPICKVAL(SBQQ__OptionType__c, &quot;Component&quot;),
SBQQ__Quote__r.Account_Segment__c = &quot;Public Sector&quot;,
ISPICKVAL(SBQQ__OptionType__c, &quot;Accessory&quot;),
ISBLANK( SBQQ__RenewedSubscription__c )),0,
(SBQQ__RenewedSubscription__r.SBQQ__PartnerDiscount__c - Tanium_Partner_Discount__r.Total_Discount__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programmatic Partner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>