objects/SBQQ__QuoteLine__c/fields/Promo_Discount_Validation__c.field-meta.xml
<CustomField>
    <fullName>Promo_Discount_Validation__c</fullName>
    <description>Compares Additional Discount with Promo Discount.  Use in Product Rule.</description>
    <formula>IF( AND(
        !ISNULL( Product_Promotion__c ),  
        Product_Promotion__r.Discount__c &lt;&gt; SBQQ__Discount__c, 
        SBQQ__Discount__c &gt; 0),
True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Discount Validation</label>
    <type>Checkbox</type>
</CustomField>