objects/SBQQ__QuoteLine__c/fields/PromoFormula__c.field-meta.xml
<CustomField>
    <fullName>PromoFormula__c</fullName>
    <formula>/*IF (ISPICKVAL(Promotion__c, &quot;&quot;), FALSE, TRUE)*/

IF (!ISBLANK( Promotion_Document2__c ), True, False)</formula>
    <label>Promo Formula</label>
    <type>Checkbox</type>
</CustomField>