objects/SBQQ__QuoteLine__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <label>Promo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Burst</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>FOC</fullName>
            </value>
            <value>
                <fullName>Concession</fullName>
                <isActive>false</isActive>
                <label>Concession</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>