objects/SBQQ__QuoteLine__c/fields/Promotion_Document2__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Document2__c</fullName>
    <description>Sourced from Product Promotion Record linked to the QuoteLine.</description>
    <label>Promotion Document2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>