objects/SBQQ__QuoteLine__c/fields/Prorated_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Prorated_List_Price__c</fullName>
    <description>Created to show total List Price from Component Product Lines.
[Backup]
IF(
AND(
SBQQ__Quote__r.SBQQ__PricebookId__c == &apos;01s0e00000075HAAAY&apos;,/* SBQQ__SubscriptionTerm__c &gt;= 12, */
TEXT(Product_Group__c) = &apos;Software&apos;,
SBQQ__Bundle__c), (SBQQ__ComponentListTotal__c / SBQQ__Quantity__c ),
SBQQ__ProratedListPrice__c
)</description>
    <formula>IF(
 AND(
SBQQ__Quote__r.SBQQ__PriceBook__r.Name == &apos;Global Pricebook&apos;,
TEXT(Product_Group__c) = &apos;Software&apos;,
SBQQ__Bundle__c), (SBQQ__ComponentListTotal__c /SBQQ__EffectiveQuantity__c),
SBQQ__ProratedListPrice__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prorated List-Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>