objects/SBQQ__QuoteLine__c/fields/Quantity_Template__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Template__c</fullName>
    <formula>SBQQ__EffectiveQuantity__c</formula>
    <label>Quantity Template</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>