objects/SBQQ__QuoteLine__c/fields/Quota_Retirement_ARR__c.field-meta.xml
<CustomField>
    <fullName>Quota_Retirement_ARR__c</fullName>
    <description>This field is used in the commissions calculation process. Jira ticket SS-9445</description>
    <formula>IF(NOT(Quota_Retirement_Eligible__c), 0,
IF(NOT(Start_Date_in_Opp_Fiscal_Year__c), 0,
IF(AND(NOT(Exclude_from_ARR__c), SBQQ__ProrateMultiplier__c &gt;= 1), ARR_Amount__c,
IF(AND(NOT(Exclude_from_ARR__c), SBQQ__ProrateMultiplier__c &lt; 1), SBQQ__NetTotal__c,
0
))))


/*
IF(NOT(Quota_Retirement_Eligible__c), 0,
IF(NOT(Start_Date_in_Opp_Fiscal_Year__c), 0,
IF(AND(NOT(Exclude_from_ARR__c), SBQQ__ProrateMultiplier__c &gt;= 1), ARR_Amount__c,
IF(AND(NOT(Exclude_from_ARR__c), SBQQ__ProrateMultiplier__c &lt; 1), SBQQ__NetTotal__c,
IF(AND(TEXT(SBQQ__Quote__r.SBQQ__Opportunity2__r.Type) = &apos;New Customer&apos;, SBQQ__Quote__r.SBQQ__Opportunity2__r.NARR_New_ARR__c &gt;= 250000, TEXT(Product_Line__c) = &apos;ESR&apos;, SBQQ__ProrateMultiplier__c &gt;= 0.5), SBQQ__NetTotal__c * (SBQQ__ProrateMultiplier__c/2),
IF(AND(TEXT(SBQQ__Quote__r.SBQQ__Opportunity2__r.Type) = &apos;New Customer&apos;, SBQQ__Quote__r.SBQQ__Opportunity2__r.NARR_New_ARR__c &gt;= 250000, TEXT(Product_Line__c) = &apos;ESR&apos;, SBQQ__ProrateMultiplier__c &lt; 0.5), SBQQ__NetTotal__c,
0
))))))
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota Retirement ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>