objects/SBQQ__QuoteLine__c/fields/Quote_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Quote_Net_Total__c</fullName>
    <description>Used in Netsuite Integration. Do not make change without informing Netsuite Team.</description>
    <formula>/* Prior version 9.22.25
SBQQ__PackageTotal__c*/


IF(
OR(
SBQQ__ProductCode__c = &apos;TAN-SECOPSHUNTIQ-CLOUD&apos;,
SBQQ__ProductCode__c = &apos;TAN-SECOPSHUNTIQ-S&apos;),
SBQQ__ComponentTotal__c,

SBQQ__PackageTotal__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in Netsuite Integration</inlineHelpText>
    <label>Quote Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>