objects/SBQQ__QuoteLine__c/fields/RARR__c.field-meta.xml
<CustomField>
    <fullName>RARR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>