objects/SBQQ__QuoteLine__c/fields/REAL_End_Date__c.field-meta.xml
<CustomField>
    <fullName>REAL_End_Date__c</fullName>
    <description>Managed by CPQ Custom Script (JavaScript) to calculate Quote Line End Date based on Start Date and Subscription Term.</description>
    <label>REAL End Date</label>
    <type>Date</type>
</CustomField>