objects/SBQQ__QuoteLine__c/fields/REAL_Term_Computed__c.field-meta.xml
<CustomField>
    <fullName>REAL_Term_Computed__c</fullName>
    <description>CPQ Custom Script (JavaScript) to calculate Subscription Term Based on Start and End Date.</description>
    <label>REAL Term Computed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>