objects/SBQQ__QuoteLine__c/fields/Recalc_Lines__c.field-meta.xml
<CustomField>
    <fullName>Recalc_Lines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalc Lines</label>
    <type>Checkbox</type>
</CustomField>