objects/SBQQ__QuoteLine__c/fields/Renewal_Uplift_Amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Uplift_Amount__c</fullName>
    <formula>/*Non Renewal Quote Line will be blank*/
IF( 
 ISBLANK( SBQQ__RenewedSubscription__c ),Null, 

/* When Prior discount is greater than programmatic discount or Tanium Partner Discount is not blank */
 IF( AND( SBQQ__RenewedSubscription__r.SBQQ__PartnerDiscount__c &gt; Tanium_Partner_Discount__r.Total_Discount__c,   NOT(ISBLANK(Tanium_Partner_Discount__c))), 

(( SBQQ__RenewedSubscription__r.SBQQ__NetPrice__c / SBQQ__RenewedSubscription__r.SBQQ__ProrateMultiplier__c )*

(( $CustomMetadata.Uplift_Approval__mdt.Deal_Desk_Approval.Adjusted_Approval_Percent__c ) + 
(SBQQ__RenewedSubscription__r.SBQQ__PartnerDiscount__c  -  Tanium_Partner_Discount__r.Total_Discount__c )) + 

SBQQ__RenewedSubscription__r.SBQQ__NetPrice__c / SBQQ__RenewedSubscription__r.SBQQ__ProrateMultiplier__c )*SBQQ__EffectiveQuantity__c, 

/* Default calculation Last years Net Price plus adjusted uplift percent */
((SBQQ__RenewedSubscription__r.SBQQ__NetPrice__c / SBQQ__RenewedSubscription__r.SBQQ__ProrateMultiplier__c ) *
 ( $CustomMetadata.Uplift_Approval__mdt.Deal_Desk_Approval.Adjusted_Approval_Percent__c ) 
+ (SBQQ__RenewedSubscription__r.SBQQ__NetPrice__c / SBQQ__RenewedSubscription__r.SBQQ__ProrateMultiplier__c)) * SBQQ__EffectiveQuantity__c  

)
)</formula>
    <label>Renewal Uplift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>