objects/SBQQ__QuoteLine__c/fields/Required_for_Provision_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Required_for_Provision_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required for TAN-PRV-TAAS
TAN-PRV-S-CONVERSION-TAAS</description>
    <label>Required for Provision Cloud</label>
    <type>Checkbox</type>
</CustomField>