objects/SBQQ__QuoteLine__c/fields/Required_for_Provision_Gov_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Required_for_Provision_Gov_Cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TAN-PRV-CLOUDGOV-US
TAN-PRV-S-CONVERSION-CLOUDGOV-US</description>
    <label>Required for Provision Gov Cloud</label>
    <type>Checkbox</type>
</CustomField>