objects/SBQQ__QuoteLine__c/fields/Required_for_Provision_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Required_for_Provision_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TAN-PRV-S</description>
    <label>Required for Provision Subscription</label>
    <type>Checkbox</type>
</CustomField>