objects/SBQQ__QuoteLine__c/fields/Restricted_SKU__c.field-meta.xml
<CustomField>
    <fullName>Restricted_SKU__c</fullName>
    <description>Formula checkbox to pull in Restricted SKU value from Product</description>
    <formula>SBQQ__Product__r.Restricted_SKU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restricted SKU</label>
    <type>Checkbox</type>
</CustomField>