objects/SBQQ__QuoteLine__c/fields/Retention_Type__c.field-meta.xml
<CustomField>
    <fullName>Retention_Type__c</fullName>
    <description>Used in price rule.  Track Upsell and Churn.</description>
    <label>Retention Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>