objects/SBQQ__QuoteLine__c/fields/Seats_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Seats_Purchased__c</fullName>
    <formula>SBQQ__Quote__r.No_of_End_Points_Quote_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>