objects/SBQQ__QuoteLine__c/fields/Show_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Invoice__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, product is shown on invoices in NS.  Managed by Price Rule.</description>
    <label>Show on Invoice</label>
    <type>Checkbox</type>
</CustomField>