objects/SBQQ__QuoteLine__c/fields/Show_Promo_Document__c.field-meta.xml
<CustomField>
    <fullName>Show_Promo_Document__c</fullName>
    <description>Controller to display or not display the Promo column on the quote template pdf.</description>
    <formula>IF(!ISBLANK( Promotion_Document2__c), true, false)</formula>
    <label>Show Promo Document</label>
    <type>Checkbox</type>
</CustomField>