objects/SBQQ__QuoteLine__c/fields/Sold_by_Operators_versus_Endpoints__c.field-meta.xml
<CustomField>
    <fullName>Sold_by_Operators_versus_Endpoints__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field allows for easy identification of products that are sold by operators. Created to support Screen Share, though there may be other products in the future</description>
    <inlineHelpText>When this box is checked, it indicates that this product is licensed by operator, not endpoint like other Tanium products. When specified in a quote, the quantity will represent the number of operators and will be discounted based on that number</inlineHelpText>
    <label>Sold by Operators versus Endpoints</label>
    <type>Checkbox</type>
</CustomField>