objects/SBQQ__QuoteLine__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>