objects/SBQQ__QuoteLine__c/fields/Standard_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Standard_Partner_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used in Price Rule as part of Stacked Partner Discount.</description>
    <inlineHelpText>Discount if quote is not direct.</inlineHelpText>
    <label>Standard Partner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>