objects/SBQQ__QuoteLine__c/fields/Start_Date_Diff__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Diff__c</fullName>
    <formula>AND(NOT(ISBLANK(NetSuite_Start_Date__c)),( NetSuite_Start_Date__c &lt;&gt; SBQQ__StartDate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Diff</label>
    <type>Checkbox</type>
</CustomField>