objects/SBQQ__QuoteLine__c/fields/Start_Date_For_Non_Training_Products__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_For_Non_Training_Products__c</fullName>
    <description>Field created to avoid Training Product&apos;s Start Date printing on Quote Doc. 
https://tanium.lightning.force.com/lightning/_classic/%2F5000e00001m07ZP?source=alohaHeader</description>
    <formula>/*IF(ISPICKVAL (Product_Type__c, &quot;Training&quot;),Null, SBQQ__StartDate__c)*/
IF(
ISPICKVAL(
SBQQ__SubscriptionPricing__c , &quot;Fixed Price&quot;),SBQQ__StartDate__c,NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date For Non Training Products</label>
    <type>Date</type>
</CustomField>