objects/SBQQ__QuoteLine__c/fields/Start_Date_in_Opp_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_in_Opp_Fiscal_Year__c</fullName>
    <description>Want to test to see if the Start Date of the line falls into the same fiscal year as the Close Date of the opportunity. This is used in the Quota Retirement ARR calculation. Jira ticket SS-9445</description>
    <formula>IF(AND(MONTH(SBQQ__StartDate__c) = 1, YEAR(SBQQ__StartDate__c) = YEAR(SBQQ__Quote__r.SBQQ__Opportunity2__r.CloseDate)), TRUE,
IF(AND(MONTH(SBQQ__StartDate__c) &gt; 1, YEAR(SBQQ__StartDate__c)+1 = YEAR(SBQQ__Quote__r.SBQQ__Opportunity2__r.CloseDate)+1), TRUE,
FALSE
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date in Opp Fiscal Year</label>
    <type>Checkbox</type>
</CustomField>