objects/SBQQ__QuoteLine__c/fields/Subscription_Term_Template__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term_Template__c</fullName>
    <description>02/04/2021: Field modified to exclude Date and Term for Training Product Type from printing on Quote doc
Ref: https://tanium.my.salesforce.com/5000e00001oS0ij</description>
    <formula>/*IF(
(ISPICKVAL( Product_Type__c , &quot;Training&quot;)), Null,
IF(
ISBLANK( SBQQ__DefaultSubscriptionTerm__c ) &amp;&amp; ISPICKVAL(Product_Type__c, &quot;Hardware&quot;), &quot; &quot;,
IF(
ISBLANK( SBQQ__DefaultSubscriptionTerm__c ) &amp;&amp; ISPICKVAL( SBQQ__Product__r.Family , &quot;Marketing&quot;), &quot; &quot;,
IF(ISPICKVAL(Product_Type__c, &quot;Perpetual&quot;), &quot;Perpetual&quot;,
Text(ROUND(Term_Computed__c,2 ))))))
*/
IF(
ISPICKVAL( SBQQ__SubscriptionPricing__c , &quot;Fixed Price&quot;), TEXT( ROUND ( Term_Computed__c ,2)),
Null)</formula>
    <label>Term Calculated</label>
    <type>Text</type>
</CustomField>