objects/SBQQ__QuoteLine__c/fields/Suggested_Uplift_Goal__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Uplift_Goal__c</fullName>
    <description>Set and Managed by CPQ Price Rule.</description>
    <label>Suggested Uplift Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>