objects/SBQQ__QuoteLine__c/fields/Suggested_Uplift_Output__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Uplift_Output__c</fullName>
    <label>Suggested Uplift Output</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>