objects/SBQQ__QuoteLine__c/fields/Summary_Discount__c.field-meta.xml
<CustomField>
    <fullName>Summary_Discount__c</fullName>
    <formula>IF(ISPICKVAL(Promotion__c, &quot;&quot;),(1-(1-Customer_Discount__c)),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>