objects/SBQQ__QuoteLine__c/fields/Support_List_Total__c.field-meta.xml
<CustomField>
    <fullName>Support_List_Total__c</fullName>
    <description>List Total from all quote lines where product grouping is Support.</description>
    <label>Support List Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>