objects/SBQQ__QuoteLine__c/fields/Tanium_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Partner_Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to Tanium Partner Discount Record.</description>
    <label>Tanium Partner Discount</label>
    <referenceTo>Tanium_Partner_Discount__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>