objects/SBQQ__QuoteLine__c/fields/Tanium_Pricing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Pricing_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tanium Pricing Schedule</label>
    <referenceTo>Tanium_Pricing_Schedule__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>