objects/SBQQ__QuoteLine__c/fields/Target_Additional_Discount__c.field-meta.xml
<CustomField>
    <fullName>Target_Additional_Discount__c</fullName>
    <description>Percent to be input in Additional Discount to reach Quote&apos;s Target Software Net Amount. Used in Price Rule - QL - Target Software Net Amount. SS-8233</description>
    <label>Target Additional Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>