objects/SBQQ__QuoteLine__c/fields/Target_Net_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Target_Net_Unit_Price__c</fullName>
    <description>Used in QL - Target Net Unit Price Price Rule. SS-9619.</description>
    <label>Target Net Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>